@@ -1,5 +1,6 @@
 Changes in 23.2
 ===============
+	* misc: Command names increased from 16 to 64 characters
 	* buildsys: signals.c depends on signames.h !16
 	* killall: look at all namespaces by default
 	* killall: Fix -INT option parsing #11
